# Podsidian

./: CLAUDE.md  README.md  config.toml.example  pyproject.toml
podsidian/: __init__.py  api.py  apple_podcasts.py  cli.py  config.py  core.py  feed_source.py  local_feeds.py  podcast_manager.py  podcast_search.py  podcast_tui.py  stdio_server.py
testing/: test_feed_source.py
